# dagster_demand_forecasting_and_dynamic_pricing

./: .env.example  .gitignore  Dockerfile  README.md  dagster_cloud.yaml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yaml  deploy.yml
docs/: structure.json
src/quickstart_etl/: definitions.py  partitions.py
src/quickstart_etl/assets/: ingestion.py
src/quickstart_etl/defs/assets/: features.py  ingestion.py  monitoring.py  serving.py  training.py  validation.py
src/quickstart_etl/defs/checks/: silver_checks.py  training_checks.py
src/quickstart_etl/defs/jobs/: __init__.py
src/quickstart_etl/defs/resources/: dask_resource.py  mlflow_resource.py  storage.py
src/quickstart_etl/defs/schedules/: __init__.py
src/quickstart_etl/defs/sensors/: drift_sensors.py
src/quickstart_etl/lib/: feature_logic.py  serving_app.py
src/quickstart_etl/resources/: storage.py
tests/: conftest.py  test_defs.py  test_features.py  test_ingestion.py  test_monitoring.py  test_serving.py  test_training.py
