[project]
name = "quickstart_etl"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-gcp",
    "dagster-gcp-pandas",
    "httpx",
    "dask[complete]",
    "pyarrow",
    "pandas",
    "scikit-learn",
    "google-cloud-bigquery",
    "google-cloud-storage",
    "optuna",
    "pandera",
    "holidays",
    "fastapi",
    "uvicorn",
    "gunicorn",
    "evidently",
    "prometheus-client",
    "yfinance",
]


[dependency-groups]
dev = [
    "dagster-dg-cli>=1.11.11",
    "dagster-webserver",
    "pytest",
    "pre-commit",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quickstart_etl"]

[tool.dagster]
module_name = "quickstart_etl.definitions"
code_location_name = "quickstart_etl"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "quickstart_etl"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["quickstart_etl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
